# siem_lite

./: .gitignore  README.md  config.example.json  main.py  pyproject.toml  rules.example.json
siem_lite/: main.py
