[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siem-lite"
version = "0.1.0"
authors = [
  { name="Purvansh Bhatt", email="your-email@example.com" },
]
description = "A simple log analysis and alerting engine for security logs."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "python-evtx",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
siem-lite = "siem_lite.main:main"
